# poise_paginator

./: Cargo.toml  README.md  architecture.excalidraw
examples/basic_usage/: Cargo.toml
examples/basic_usage/src/: lib.rs  main.rs
examples/custom_paginator/: Cargo.toml
examples/custom_paginator/src/: lib.rs  main.rs  view.rs
src/: cancellation_type.rs  custom_paginator.rs  event.rs  lib.rs  paginator.rs
src/view/: default_view.rs  mod.rs
