[package]
name = "poise_paginator-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
poise = "0.6.1"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
poise_paginator = { path = "../../" }
